Fix overflow of columns style at 768-1000 breakpoint

--- a/src/app/components/event-content/event-content.component.css
+++ b/src/app/components/event-content/event-content.component.css
@@ -13,7 +13,7 @@
 
 @media screen and (max-width: 540px) {
   .main-content {
-    height: 360px;
+    height: 100%;
   }
 }
 
@@ -27,6 +27,8 @@
   }
 
   .sm-screen-only {
+    padding-top: 40px;
+    margin-top: 40px;
     display: inherit;
   }
 }
