--- a/src/app/components/next-step-content/next-step-content.component.css
+++ b/src/app/components/next-step-content/next-step-content.component.css
@@ -14,7 +14,6 @@
 
 .content-text {
   margin: 0;
-  padding: 0;
 }
 
 .phone-link {
